Fix: Sonar issues.