@@ -14,7 +14,6 @@ import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.jboss.jandex.AnnotationTarget.Kind;
 import org.jboss.jandex.ClassInfo;
@@ -132,7 +131,7 @@ public class IndexClasses {
 
     public List<Class<?>> getSubClassesWithAnnotation(Class<?> klasse, Class<?> annotationClass) {
         var classesWithAnnotation = getClassesWithAnnotation(annotationClass);
-        return classesWithAnnotation.stream().filter(c -> klasse.isAssignableFrom(c)).collect(Collectors.toList());
+        return classesWithAnnotation.stream().filter(klasse::isAssignableFrom).toList();
     }
 
     public List<Class<?>> getClasses(Predicate<ClassInfo> predicate, Predicate<Class<?>> classPredicate) {
@@ -156,6 +155,6 @@ public class IndexClasses {
     }
 
     public static IndexClasses getIndexFor(final URI location) {
-        return INDEXES.computeIfAbsent(location, uri -> new IndexClasses(uri));
+        return INDEXES.computeIfAbsent(location, IndexClasses::new);
     }
 }
